# wolfgirl-serve

./: Cargo.toml  readme.md
src/: app.rs  main.rs  stats.rs
src/api/: query.rs
src/routes/: backend.rs  frontend.rs  mod.rs  static_file.rs  style.css
templates/: drive.html.tera
